syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "ActivityEvilBaoArriveProto";

package activityEvilBaoArrive;

enum RequestType{
	TAKE_GIFT = 1;	//领取奖励
}

message ActivityCommonReqMsg{
	required RequestType reqType = 1;//请求功能协议类型
	optional string activityId = 2; //活动id
	optional string subItemId = 3;  //子项id 对应这个活动的每一个奖励和条件
}

message ActivityCommonRspMsg{
	required bool isSuccess = 1;//是否成功处理
	optional string tipMsg = 2;//提示消息，可以是成功，也可以是失败的提示消息
}